[project]
name = "travelling-venetian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.3.0",
    "modal>=1.5.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "ortools>=9.15.6755",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "torch>=2.12.0",
    "wandb>=0.27.2",
]

[project.optional-dependencies]
cloud = [
    "modal>=0.73.0",
    "wandb>=0.19.0",
]
