[project]
name = "travelling-venetian"
version = "0.1.0"
description = "Venice multimodal TSP with classical solvers, supervised ML, and RL experiments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.3.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "ortools>=9.15.6755",
    "torch>=2.12.0",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=7.0.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
]
cloud = [
    "modal>=0.73.0",
    "wandb>=0.19.0",
]
